basic reactjs app created

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,5 @@
 extends layout
 block content
-  h1 React.js Progressive Web App Example
+  h1 React.js Progressive Web App
   main#app
   script(src="/js/bundle.js")
