--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,6 +7,15 @@ html
     meta(name="description", content="")
     meta(name="keywords", content="")
     title= title
-    link(rel="shortcut icon", href="/img/favicon.ico")
+    link(rel="shortcut icon", href="/favicon.ico")
+    link(rel="apple-touch-icon", href="/favicon.ico")
+    link(rel="manifest", href="/manifest.json")
+    meta(name="mobile-web-app-capable", content="yes")
+    meta(name="apple-mobile-web-app-capable", content="yes")
+    meta(name="theme-color", content="#536878")
+    style
+      include ../src/styles.css
   body
     block content
+    script
+      include ../src/register-sw.js
